# dg-codegen

./: CMakeLists.txt  README.md  build.sh  commit.sh
include/: Array.hpp  AutoDifferentiation.hpp  Basis.hpp  BiconjugateGradient.hpp  Complex.hpp  Constants.hpp  ContainerArithmetic.hpp  Definitions.hpp  DifferentialEquation.hpp  DoubleReal.hpp  EulerState.hpp  EulersState.hpp  FArray.hpp  Face.hpp  FermiDirac.hpp  ForwardDeclarations.hpp  GRGrid.hpp  Grid.hpp  GridAttributes.hpp  HLLC.hpp  HalfInteger.hpp  Hdf5.hpp  HydroGrid.hpp  Hydrodynamics.hpp  HyperGrid.hpp  HyperSubgrid.hpp  Hypergeometric.hpp  Indent.hpp  Index.hpp  IndexTuple.hpp  Integrate.hpp  Interpolate.hpp  Interval.hpp  Kernels.hpp  Legendre.hpp  LegendreP.hpp  Limiters.hpp  LinearGravity.hpp  Matrix.hpp  Metric.hpp  (+36 more)
src/: CodeGen.cpp  Constants.cpp  Einstein.cpp  FermiDirac.cpp  Integers.cpp  LegendreP.cpp  Octogrid.cpp  Options.cpp  Radiation.cpp  Sod.cpp  SodShockTube.cpp  Symbolic.cpp  Util.cpp  Util.hpp  Valarray.cpp  codegen.cpp  dag.cpp  main.cpp  permutation.cpp  stateCodegen.cpp  test.cpp
